Changelog for GoodNews

GoodNews 1.3.2-pl (2014-11-01)
--------------------------------------------------
- small lexicon adjustments to better match MODX 2.3
- [#26] Editing a GoodNews Container - mailing templates category dropdown doesn't list all Categories


GoodNews 1.3.1-pl (2014-10-28)
--------------------------------------------------
- [#25] Extend Subscriber Importer to enable "Update" of existing subscribers
- fixed a bug in Import console window (console window is now destroyed after closing)
- fixed a bug in German lexicon file (missing semicolon could lead to white page -> sorry for this!)
- GoodNews management interface now takes account of MODX manager date and time format settings
- deleted mailing editor users are now recognized and it's id is now shown instead empty string


GoodNews 1.3.0-pl (2014-10-13)
--------------------------------------------------
- [#15] new feature: Content collector


GoodNews 1.2.2-pl (2014-09-15)
--------------------------------------------------
- some small cosmetical changes in forms


GoodNews 1.2.1-pl (2014-09-14)
--------------------------------------------------
- adapted searchfilter fields + reset buttons above grids to match MODX 2.3 style
- added debug-mode status to System Checks table
- [#24] fixed rendering of grids in tab panels (resizing problem)
- fixed some PHP warnings in getgroupcatnodes.class.php
- fixed some IMAP warnings in bounce handler


GoodNews 1.2.0-pl (2014-09-09)
--------------------------------------------------
- [#23] fixed PHP memory limit problem on server with huge list of subscribers
- complete rewrite on how the sending engine handles recipients!
- huge performance increase and much better memory management for sending engine
- many other small memory and performance related enhancements
- added sending error counter to mailing grid


GoodNews 1.1.7-pl (2014-09-02)
--------------------------------------------------
- [#20] new feature to manually disable multiprocessing